--- a/treasure.html
+++ b/treasure.html
@@ -43,7 +43,7 @@
             background-color: skyblue;
         }
         .help {
-            background-color: black;
+            background-color: white;
         }
     </style>
 
@@ -69,5 +69,103 @@
             </div>
         </div>
         <br>
+        <!-- Part 3 -->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="helpmeplz.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+                <div class="col-sm">
+                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
 </body>
 </html>
