--- a/treasure.html
+++ b/treasure.html
@@ -11,161 +11,208 @@
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" 
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    
     <style>
         h1 {
-           color: yellowgreen;
-           font-family:sans-serif;
+           color: green;
+           font-family:Cambria;
            padding: 5px;
            margin-bottom: 10px;
         }
         .menu {
             background-color: pink;
-            padding: 3px;
+            padding: 4px;
             text-align: center;
         }
         .menu-item {
-            font-family:'Gill Sans';
-            font-weight: 800;
+            font-family:Verdana;
+            font-weight: 600;
             font-size: 18px;
         }
         .menu-item:hover {
-            background-color: blueviolet;
+            background-color: blue;
             color: #367E18;
         }
         .search {
-            background-color: yellow;
+            background-color: burlywood;
         }
         .check {
-            background-color: red;
+            background-color: purple;
         }
         .score {
-            background-color: skyblue;
+            background-color: aqua;
         }
         .help {
-            background-color: white;
+            background-color: yellowgreen;
         }
     </style>
 
-
-
 </head>
 <body>
-    <div class="container text-center">
-        <!-- Part 2 -->
-        <h1>Treasure hunt by Jeeva</h1>
-        <div class="row menu">
-            <div class="col-sm menu-item search">
-                Click on the chests to search for treasure
-            </div>
-            <div id="chests" class="col-sm menu-item check">
-                Number of chests checked is zero
-            </div>
-            <div id="score" class="col-sm menu-item score">
-                Score is unknown
-            </div>
-            <div id="help" class="col-sm menu-item help">
-                Help report
-            </div>
+    <!-- Part 2 -->
+    <h1>Treasure hunt by Jeeva</h>
+    <div class="row menu">
+        <div class="col-sm menu-item search">
+            Click on the chests to search for treasure
         </div>
-        <br>
-        <!-- Part 3 -->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-            </div>
+        <div id="chests" class="col-sm menu-item check">
+            Number of chests checked is zero
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-            </div>
+        <div id="score" class="col-sm menu-item score">
+            Score is unknown
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="helpmeplz.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-            </div>
+        <div id="help" class="col-sm menu-item help">
+            Help report
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
+    </div>
+    <!-- Part 3 -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img id="img_0" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(0)">
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
-                <div class="col-sm">
-                    <img src="boxclosed.jpg" alt="Treasure Chest" width="150" height="150">
-                </div>
+            <div class="col-sm">
+                <img id="img_1"src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(1)">
+            </div>
+            <div class="col-sm">
+                <img id="img_2" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(2)">
+            </div>
+            <div class="col-sm">
+                <img id="img_3" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(3)">
+            </div>
+            <div class="col-sm">
+                <img id="img_4" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(4)">
             </div>
         </div>
     </div>
-    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img id="img_5"src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(5)">
+            </div>
+            <div class="col-sm">
+                <img id="img_6" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(6)">
+            </div>
+            <div class="col-sm">
+                <img id="img_7" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(7)">
+            </div>
+            <div class="col-sm">
+                <img id="img_8" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(8)">
+            </div>
+            <div class="col-sm">
+                <img id="img_9" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(9)">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img id="img_10" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(10)">
+            </div>
+            <div class="col-sm">
+                <img id="img_11" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(11)">
+            </div>
+            <div class="col-sm">
+                <img id="img_12"src="helpmeplz.jpg" alt="Treasure Chest" width="140" height="140" onclick="help()">
+            </div>
+            <div class="col-sm">
+                <img id="img_13" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(13)">
+            </div>
+            <div class="col-sm">
+                <img id="img_14" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(14)">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img id="img_15" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(15)">
+            </div>
+            <div class="col-sm">
+                <img id="img_16" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(16)">
+            </div>
+            <div class="col-sm">
+                <img id="img_17" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(17)">
+            </div>
+            <div class="col-sm">
+                <img id="img_18" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(18)">
+            </div>
+            <div class="col-sm">
+                <img id="img_19" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(19)">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img id="img_20" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(20)">
+            </div>
+            <div class="col-sm">
+                <img id="img_21" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(21)">
+            </div>
+            <div class="col-sm">
+                <img id="img_22" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(22)">
+            </div>
+            <div class="col-sm">
+                <img id="img_23" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(23)">
+            </div>
+            <div class="col-sm">
+                <img id="img_24" src="boxclosed.jpg" alt="Treasure Chest" width="140" height="140" onclick="check(24)">
+            </div>
+        </div>
+    </div>
+   
+<!-- Part 4 -->
+<script>
+    var ids = [
+                "img_0", "img_1", "img_2", "img_3", "img_4","img_5", "img_6", "img_7", "img_8", "img_9","img_10", "img_11", "img_12", "img_13", "img_14","img_15", "img_16", "img_17", "img_18", "img_19","img_20", "img_21", "img_22", "img_23", "img_24"
+            ]
+    var chestCount = 0
+    var score = 0
+    var lastCheck = 12
+    var treasureLocation = 18
+
+    function check(position) {
+        image = document.getElementById(ids[position])
+        if(position == treasureLocation) {
+            image.src = "boxwithcoins.jpg"
+            score += 1 // to change
+        } else {
+            image.src = "emptybox.jpg"
+        }
+        chestCount += 1
+        document.getElementById("chests").innerHTML = "Number of chests checked is " +         chestCount;
+        document.getElementById("score").innerHTML = "Score is " + score
+        lastCheck = position;
+    }
+
+    function help() {
+        lastCheck_row = parseInt(lastCheck / 5)
+        lastCheck_column = parseInt(lastCheck % 5)
+        treasureLocation_row = parseInt(treasureLocation / 5)
+        treasureLocation_column = parseInt(treasureLocation % 5)
+        score += 2
+        document.getElementById("score").innerHTML = "Score is " + score
+        if(lastCheck_row == treasureLocation_row) {
+            if(lastCheck_column < treasureLocation_column) {
+                document.getElementById("help").innerHTML = "Right"
+            } else if(lastCheck_column > treasureLocation_column) {
+                document.getElementById("help").innerHTML = "Left"
+            } else {
+                document.getElementById("help").innerHTML = "Sorry, no help available"
+            }
+        } else if(lastCheck_column == treasureLocation_column) {
+            if(lastCheck_row > treasureLocation_row) {
+                document.getElementById("help").innerHTML = "Up"
+            } else if(lastCheck_row < treasureLocation_row) {
+                document.getElementById("help").innerHTML = "Down"
+            } else {
+                document.getElementById("help").innerHTML = "Sorry, no help available"
+            }
+        } else {
+            document.getElementById("help").innerHTML = "Sorry, no help available"
+        }
+    }
+</script>
+</script>
 </body>
 </html>
